@@ -1,10 +1,10 @@
 Package: DDIwR
 Version: 0.2-0
-Date: 2014-08-10
+Date: 2014-09-07
 Title: DDI with R
 Authors@R: c(person("Adrian", "Dusa", role = c("aut", "cre"),
                       email = "dusa.adrian@unibuc.ro"))
-Depends: R (>= 3.0.0)
+Depends: R (>= 3.1.0)
 Imports: XML, foreign
 Description: This package provides useful functions for various DDI (Data Documentation Initiative) related outputs.
 License: GPL (>= 2)
