@@ -1,9 +1,12 @@
 Version 0.2-0
     o better arrangement of missing types in the R commands
     o some improvements in the R code generation
+    o improved SAS setup file (thanks to Alexandre Kych)
+    o the package now reads both ".csv" and ".csv.gz" files
+    o new internal function getDelimiter() to try identifying the .csv column separator
 
 Version 0.1-0
-    o R and SAS versions are now produced
+    o R and SAS versions are now produced, in addition to SPSS and Stata
     o additional argument "saveFile" to both getMetadata() and setupfile()
     
 Version 0.0-7
